# test-pre-commit-ci

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yaml
test_pre_commit_ci/: main.py
tests/: main_test.py
